fix more layout issues

--- a/css/type.css
+++ b/css/type.css
@@ -165,7 +165,7 @@ p {
   line-height: 1.3rem;
   font-weight: normal;
   font-family: "FiraSans-Medium";
-  font-size: .875rem;
+
 }
 
 .course-info1, .course-info2 {
